Added to assets folder JS and Vars Sass file Included Jquery

--- a/assets/sass/_main.sass
+++ b/assets/sass/_main.sass
@@ -1,1 +1,22 @@
 //main: style.sass
+body
+	font-family: $globalFontFam
+	background: url(../media/start-project.jpeg)
+	background-size: cover
+	width: 100vw
+	height: 100vh
+//erase this on start
+h1, h4
+  top: 40%
+  left: 40%
+  display: inline-block
+  position: absolute
+  width: 300px
+  margin: 0 auto
+h4
+	top: 50%
+h1, h4
+	color: $highlight
+	padding: 10px
+	background: rgba(0,0,0,0.4)
+	text-align: center
