--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -1,4 +1,4 @@
 // compileExpanded: ../css/$1.css
-@import normalize
-@import toast
+@import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,400italic,700,700italic)
+@import vars
 @import main
